updating deployement menifest with namesapce (was missing)

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -4,6 +4,7 @@ metadata:
   name: my-ci-cd-app
 spec:
   replicas: 2
+  namespace: demoapp-namespace
   selector:
     mactchLabels:
       app: my-ci-cd-app
