--- a/service.yaml
+++ b/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: myapp-service
-  namespace: argocd
+  namespace: demoapp-namespace
 spec:
   type: LoadBalancer
   ports:
