matchLabels field correction

--- a/deployment.yaml
+++ b/deployment.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   replicas: 2
   selector:
-    mactchLabels:
+    matchLabels:
       app: my-ci-cd-app
   template:
     metadata:
