--- a/CI-CD_Pipeline-1/deployment.yaml
+++ b/CI-CD_Pipeline-1/deployment.yaml
@@ -15,6 +15,6 @@ spec:
     spec:
       containers:
       - name: demoapp
-        image: praveen4712/cicd-pipeline:rathan
+        image: praveen4712/cicd-pipeline:1.0.${BUILD_NUMBER}
         ports: 
         - containerPort: 80
